--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue-router-layout": "^0.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~4.5.0",
